# boost-mpi-example-docker

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  test.sh
